--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc",
-    "watch":"tsc -w",
+    "watch": "tsc -w",
     "dev": "nodemon dist/app.js"
   },
   "keywords": [],
@@ -19,11 +19,13 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "@types/validator": "^13.11.7",
     "typescript": "^5.3.3"
   }
 }
